--- a/PersonalIncomeStatement/MainWindow.xaml
+++ b/PersonalIncomeStatement/MainWindow.xaml
@@ -6,7 +6,33 @@
         xmlns:local="clr-namespace:PersonalIncomeStatement"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+    <Grid Height="400" Margin="10 10 10 10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Income" Grid.Row="0"></TextBlock>
+        <StackPanel Grid.Row="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Date"></TextBlock>
+                <DatePicker Grid.Row="0" Grid.Column="1" Text="{Binding ReceiveDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></DatePicker>
+                <TextBlock Text="Description" Grid.Column="0" Grid.Row="1"></TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="1" Height="40" Text="{Binding Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock Text="Money" Grid.Column="0" Grid.Row="2"></TextBlock>
+                <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Money, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
+                <Button Content="Save" Grid.Column="1" Grid.Row="3" Command="{Binding SaveCommand}"></Button>
+            </Grid>
+        </StackPanel>
     </Grid>
 </Window>
