--- a/PersonalIncomeStatement/Views/PaymentAddingView.xaml
+++ b/PersonalIncomeStatement/Views/PaymentAddingView.xaml
@@ -1,17 +1,27 @@
-﻿<Window x:Class="PersonalIncomeStatement.MainWindow"
+﻿<Window x:Class="PersonalIncomeStatement.Views.PaymentAddingView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PersonalIncomeStatement"
+        xmlns:enm="clr-namespace:PersonalIncomeStatement.Models.Enums"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
+        xmlns:local="clr-namespace:PersonalIncomeStatement.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="PaymentAddingViewModel" Height="450" Width="800">
+    <Window.Resources>
+        <ObjectDataProvider x:Key="enmPositions" MethodName="GetValues" ObjectType="{x:Type System:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="enm:ExpenseType"></x:Type>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </Window.Resources>
+    
     <Grid Height="400" Margin="10 10 10 10">
         <Grid.RowDefinitions>
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Text="Income" Grid.Row="0"></TextBlock>
+        <TextBlock Text="Expensive adding" Grid.Row="0"></TextBlock>
         <StackPanel Grid.Row="1">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -23,15 +33,18 @@
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
+                    <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
-                
+
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="Date"></TextBlock>
                 <DatePicker Grid.Row="0" Grid.Column="1" Text="{Binding ReceiveDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></DatePicker>
                 <TextBlock Text="Description" Grid.Column="0" Grid.Row="1"></TextBlock>
                 <TextBox Grid.Column="1" Grid.Row="1" Height="40" Text="{Binding Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 <TextBlock Text="Money" Grid.Column="0" Grid.Row="2"></TextBlock>
                 <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Money, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
-                <Button Content="Save" Grid.Column="1" Grid.Row="3" Command="{Binding SaveCommand}"></Button>
+                <TextBlock Text="Expensive type" Grid.Row="3" Grid.Column="0" />
+                <ComboBox Grid.Row="3" Grid.Column="1" ItemsSource="{Binding Source={StaticResource enmPositions}}" SelectedItem="{Binding SelectedType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/> 
+                <Button Content="Save" Grid.Column="1" Grid.Row="4" Command="{Binding SaveCommand}"></Button>
             </Grid>
         </StackPanel>
     </Grid>
