--- a/PersonalIncomeStatement/MainWindow.xaml
+++ b/PersonalIncomeStatement/MainWindow.xaml
@@ -11,28 +11,11 @@
             <RowDefinition Height="40"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBlock Text="Income" Grid.Row="0"></TextBlock>
+        <TextBlock Text="Main window" Grid.Row="0" />
         <StackPanel Grid.Row="1">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="Date"></TextBlock>
-                <DatePicker Grid.Row="0" Grid.Column="1" Text="{Binding ReceiveDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></DatePicker>
-                <TextBlock Text="Description" Grid.Column="0" Grid.Row="1"></TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="1" Height="40" Text="{Binding Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <TextBlock Text="Money" Grid.Column="0" Grid.Row="2"></TextBlock>
-                <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Money, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  />
-                <Button Content="Save" Grid.Column="1" Grid.Row="3" Command="{Binding SaveCommand}"></Button>
-            </Grid>
+            <Button Content="Add income" Click="Button_Click"></Button>
+            <Button Content="Add payment"></Button>
+            <Button Content="Payment detail"></Button>
         </StackPanel>
     </Grid>
 </Window>
